Fix #130422: Expand Active Face Set crashes on Multires mesh

Caused by dcb3391e1077b9e1d4bdf81ff1a14ea4f7593a8c

Pull Request: https://projects.blender.org/blender/blender/pulls/130431