source/blender/editors/sculpt_paint/sculpt_expand.cc
@@ -1312,15 +1312,11 @@ static void init_from_face_set_boundary(const Depsgraph &depsgraph,
       const CCGKey key = BKE_subdiv_ccg_key_top_level(subdiv_ccg);
       threading::parallel_for(IndexRange(totvert), 1024, [&](const IndexRange range) {
         for (const int vert : range) {
+          const SubdivCCGCoord coord = SubdivCCGCoord::from_index(key, vert);
           vert_has_face_set[vert] = face_set::vert_has_face_set(
-              subdiv_ccg, face_sets, vert, active_face_set);
+              subdiv_ccg, face_sets, coord.grid_index, active_face_set);
           vert_has_unique_face_set[vert] = face_set::vert_has_unique_face_set(
-              faces,
-              corner_verts,
-              vert_to_face_map,
-              face_sets,
-              subdiv_ccg,
-              SubdivCCGCoord::from_index(key, vert));
+              faces, corner_verts, vert_to_face_map, face_sets, subdiv_ccg, coord);
         }
       });
       break;
